--- a/_quarto.yml
+++ b/_quarto.yml
@@ -31,11 +31,9 @@ website:
   page-footer:
     border: true
     left: |
-      Powered by [{{< iconify simple-icons:quarto title="Quarto Logo" label="Quarto Logo" >}} Quarto](https://quarto.org) and [{{< bi github title="GitHub Logo" label="GitHub Logo" >}} GitHub Pages](https://docs.github.com/en/pages).
+      Powered by [{{< iconify simple-icons:quarto title="Quarto Logo" label="Quarto Logo" >}} Quarto](https://quarto.org) and [<i class="bi bi-github"></i> GitHub Pages](https://docs.github.com/en/pages).
     center: |
       Copyright © 2026 Dylan Bretz Jr.
-    right: |
-      License: [CC BY NC SA 4.0](https://creativecommons.org/licenses/by-nc-sa/4.0).
   twitter-card: true
   open-graph: true
   back-to-top-navigation: true
